2004-02-24  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in (kshd, klogind): Link against apputils lib.

2003-08-29  Ken Raeburn  <raeburn@mit.edu>

	* configure.in: Call KRB5_AC_NEED_DAEMON instead of checking
	whether daemon() prototype is needed.

	* krshd.c (ignore_signals): Split out from cleanup().
	(doit): Call it when the shell process has completed, before
	calling syslog.

2003-05-23  Ken Raeburn  <raeburn@mit.edu>

	* configure.in: Don't use libkrb524.a any more.
	* login.c: Don't include krb524.h.
	(try_convert524): Don't call krb524_init_ets.

2003-05-09  Tom Yu  <tlyu@mit.edu>

	* krcp.c (main): Rename getlocalsubkey -> getsendsubkey.

	* krlogin.c (main): Rename getlocalsubkey -> getsendsubkey.

	* krlogind.c (recvauth): Rename getremotesubkey -> getrecvsubkey.

	* krsh.c (main): Rename getlocalsubkey -> getsendsubkey.

	* krshd.c (recvauth): Rename getremotesubkey -> getrecvsubkey.

2003-04-08  Ken Raeburn  <raeburn@mit.edu>

	* krshd.c (main): Use LOG_AUTH syslog facility, not LOG_DAEMON,
	for consistency with krlogind.c.

2003-03-28  Ken Raeburn  <raeburn@mit.edu>

	* kcmd.c (kcmd_connect): Log errors if a connect to port 0 is
	attempted.  Report port number in connection failure.
	(setup_secondary_channel): Use socklen_t for socket address
	length.

2003-03-04  Ken Raeburn  <raeburn@mit.edu>

	* compat_recv.c: Only include krb.h if KRB5_KRB4_COMPAT.
	(krb_v4_recvauth, krb5_compat_recvauth,
	krb5_compat_recvauth_version): Define only if KRB5_KRB4_COMPAT.
	* krlogind.c: Include krb.h only if KRB5_KRB4_COMPAT.
	(v4_kdata, v4_schedule): Define only if KRB5_KRB4_COMPAT.
	(recvauth) [!KRB5_KRB4_COMPAT]: Skip v4 stuff and call
	krb5_recvauth_version.

2003-03-03  Tom Yu  <tlyu@mit.edu>

	* Makefile.in (DEFINES): Add -DKERBEROS.

	* configure.in: Delete ADD_DEF.

2003-02-05  Tom Yu  <tlyu@mit.edu>

	* login.c (main): Don't zero out terminal window size.

2003-02-03  Tom Yu  <tlyu@mit.edu>

	* login.c (dofork): Don't dissociate from controlling tty in the